K8S/chat-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatnpservice-srv
spec:
  type: NodePort
  selector:
    app: chatservice
  ports:
    - name: chatservice
      protocol: TCP
      port: 80
      targetPort: 80
