K8S/email-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: emailnpservice-srv
spec:
  type: NodePort
  selector:
    app: emailservice
  ports:
    - name: emailservice
      protocol: TCP
      port: 80
      targetPort: 80
