K8S/facade-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: facadenpservice-srv
spec:
  type: NodePort
  selector:
    app: facadeservice
  ports:
    - name: facadeservice
      protocol: TCP
      port: 80
      targetPort: 80
