K8S/message-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messageservice
  template:
    metadata:
      labels:
        app: messageservice
    spec:
      containers:
        - name: messageservice
          image: dmitriyshv/messageservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: message-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: messageservice
  ports:
  - name: messageservice
    protocol: TCP
    port: 80
    targetPort: 80
