K8S/message-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: messagenpservice-srv
spec:
  type: NodePort
  selector:
    app: messageservice
  ports:
    - name: messageservice
      protocol: TCP
      port: 80
      targetPort: 80
