K8S/tenant-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tenant-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tenantservice
  template:
    metadata:
      labels:
        app: tenantservice
    spec:
      containers:
        - name: tenantservice
          image: binarythistle/tenantservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: tenant-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: tenantservice
  ports:
  - name: tenantservice
    protocol: TCP
    port: 80
    targetPort: 80
