K8S/tenant-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: tenantnpservice-srv
spec:
  type: NodePort
  selector:
    app: tenantservice
  ports:
    - name: tenantservice
      protocol: TCP
      port: 80
      targetPort: 80
