K8S/user-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: usernpservice-srv
spec:
  type: NodePort
  selector:
    app: userservice
  ports:
    - name: userservice
      protocol: TCP
      port: 80
      targetPort: 80
